# jquiz

./: CMakeLists.txt  README  README.md  jquiz.pro  jquiz.qml  jquiz.qrc  kana.cpp  kana.h  kanatextedit.cpp  kanatextedit.h  kanji.qml  main.cpp  questions-sample  quiz.cpp  quiz.h  reading.qml
src/: Answer.qml  CMakeLists.txt  SpeechButton.qml  jquiz.qrc  kana.cpp  kana.h  kanatextedit.h  kanji.qml  main.cpp  quiz.cpp  quiz.h  reading.qml  synth.cpp  synth.h  synththread.cpp  synththread.h
src/assets/: assets.qrc
src/qml/: Answer.qml  SpeechButton.qml  jquiz.qml  kanji.qml  qml.qrc  reading.qml
